--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>15 Puzzle</title>
-    <link rel="stylesheet" href="styling.css">
-    <link rel="script" href="puzzle.js">
+    <title>Fifteen Puzzle</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="styling.css"/>
+    <script src="puzzle.js" type="text/javascript"></script>
 </head>
 <body>
-
-</body>
-</html>
+<h1>Fifteen Puzzle</h1>
+<div id="main">
+    <div id="puzzle">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+        <div>11</div>
+        <div>12</div>
+        <div>13</div>
+        <div>14</div>
+        <div>15</div>
+    </div>
+    <div id="shuffle">
+        <button id="shufflebutton">Shuffle</button>
+    </div>
+</div>
