--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <script src="puzzle.js" type="text/javascript"></script>
 </head>
 <body>
+    <div id="select_background">
+        <p>Select background:</p>
+        <select id="background">
+            <option value="./backgrounds/fine.jpg">Background 1</option>
+            <option value="./backgrounds/heman.jpg">Background 2</option>
+            <option value="./backgrounds/pepe_sad.jpg">Background 3</option>
+            <option value="./backgrounds/swamp.jpg">Background 4</option>
+        </select>
+    </div>
+    <div id="time_counter">
+        <p>Time: <span id="time">0</span></p>
+    </div>
+    <div id="move_counter">
+        <p>Number of moves: <span id="moves">0</span></p>
+    </div>
 <h1>Fifteen Puzzle</h1>
 <div id="main">
     <div id="puzzle">
