attempting to change the backgorund colour

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="select_background">
         <p>Select background:</p>
-        <select id="background">
+        <select onchange="changeImage();" id="background">
             <option value="./backgrounds/fine.jpg">Background 1</option>
             <option value="./backgrounds/heman.jpg">Background 2</option>
             <option value="./backgrounds/pepe_sad.jpg">Background 3</option>
