--- a/win.html
+++ b/win.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <audio controls autoplay>
-        <source src="horse.ogg" type="audio/ogg">
-        <source src="horse.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
+  <audio hidden controls autoplay loop>
+    <source  src="win.mp4" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
     <title>Fifteen Puzzle</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="styling.css"/>
