moves counter works!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Time elapsed: <span id="time">0</span></p>
     </div>
     <div id="move_counter">
-        <p>Number of moves: <span id="moves">0</span></p>
+        <p>Number of moves: <span id="moves"></span></p>
     </div>
 <h1>Fifteen Puzzle</h1>
 <div id="main">
