time is being recorded!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button onclick="changeBackground(3)">Background 4</button>
     </div>
     <div id="time_counter">
-        <p>Time elapsed: <span id="time">0</span></p>
+        <p>Time elapsed: <span  id="time"></span></p>
     </div>
     <div id="move_counter">
         <p>Number of moves: <span id="moves"></span></p>
