moves reset on shuffle

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button id="shufflebutton">Shuffle</button>
     </div>
     <div>
-        <button onclick="solve()" id="solvebutton">Solve</button>
+        <button onclick="win()" id="solvebutton">Solve</button>
     </div>
 </div>
 </body>
