--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <source  src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
-
+    <div class="controls">
     <div id="select_background">
         <p>Select background:</p>
         <button onclick="changeBackground(0)">Background 1</button>
@@ -25,6 +25,7 @@
     <div id="move_counter">
         <p>Number of moves: <span id="moves"></span></p>
     </div>
+</div>
 <h1>Fifteen Puzzle</h1>
 <div id="main">
     <div id="puzzle">
@@ -47,8 +48,6 @@
     <div id="shuffle">
         <button id="shufflebutton">Shuffle</button>
     </div>
-    <div>
-        <button onclick="win()" id="solvebutton">Solve</button>
-    </div>
+    
 </div>
 </body>
