--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <div id="shuffle">
         <button id="shufflebutton">Shuffle</button>
     </div>
-    
+    <div>
+        <button onclick="win()" id="solvebutton">Solve</button>
+    </div>
 </div>
 </body>
