--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="styling.css"/>
     <script src="puzzle.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
 
@@ -25,6 +26,14 @@
     <div id="move_counter">
         <p>Number of moves: <span id="moves"></span></p>
     </div>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>You win! </p>
+            <p id="winTime"></p>
+            <p id="winMoves"></p>
+        </div>
+    </div>
 </div>
 <h1>Fifteen Puzzle</h1>
 <div id="main">
@@ -45,11 +54,9 @@
         <div>14</div>
         <div>15</div>
     </div>
+
     <div id="shuffle">
         <button id="shufflebutton">Shuffle</button>
-    </div>
-    <div>
-        <button onclick="win()" id="solvebutton">Solve</button>
     </div>
 </div>
 </body>
