--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Fifteen Puzzle</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" type="text/css" href="styling.css"/>
-    <script src="puzzle.js" type="text/javascript"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styling.css">
+    <script src="puzzle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
@@ -59,4 +60,11 @@
         <button id="shufflebutton">Shuffle</button>
     </div>
 </div>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                 alt="Valid CSS!" />
+        </a>
+    </p>
 </body>
