--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-
     <audio hidden controls autoplay loop>
         <source  src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
@@ -60,14 +59,17 @@
         <button id="shufflebutton">Shuffle</button>
     </div>
 
-    
-    
 </div>
-    <p>
+    <p style="text-align: right">
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
                  src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                 alt="Valid CSS!" />
+                 alt="Valid CSS!" >
+        </a>
+        <a href="https://validator.w3.org/">
+            <img style="border:0;width:88px;height:31px"
+                 src="w3c.png"
+                 alt="Valid html!" >
         </a>
     </p>
 </body>
