--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p>You win! </p>
+            <h3 class="rainbow_text_animated">You win!</h3>
             <p id="winTime"></p>
             <p id="winMoves"></p>
         </div>
@@ -63,7 +63,7 @@
     <p style="text-align: right">
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
-                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                 src="vcss-blue.gif"
                  alt="Valid CSS!" >
         </a>
         <a href="https://validator.w3.org/">
